--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "java.project.sourcePaths": [
+        "level1/Basics of Programming/pattern",
         "level1/Basics of Programming/Getting Started",
-        "level1/Basics of Programming/pattern"
+        "level1/Basics of Programming/Functions and Array"
     ]
 }
