--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,10 @@
 {
     "java.project.sourcePaths": [
+        "level1/Recursion and BackTracking/Recursion in ArrayLists",
         "level1/Basics of Programming/pattern",
         "level1/Basics of Programming/Getting Started",
-        "level1/Basics of Programming/Functions and Array"
+        "level1/Basics of Programming/Functions and Array",
+        "Introduction to Recursion",
+        "Recursion in Array"
     ]
 }
