Extra questions added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,8 @@
         "level1/Basics of Programming/pattern",
         "level1/Basics of Programming/Getting Started",
         "level1/Basics of Programming/Functions and Array",
+        "TIme and Space Complexity",
         "Recursion in Array",
-        "TIme and Space Complexity"
+        ""
     ]
 }
